--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>build this webpage</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=0.7">
         <link rel="stylesheet" type="text/css" href="style/reset.css"/>
         <link rel="stylesheet" type="text/css" href="style/style.css"/>
         <link rel="icon" href="image/google-icon.png"/>
